--- a/portofolio-website/package.json
+++ b/portofolio-website/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "13.5.4",
+    "node-sass": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.7"
